# AstroX

./: .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
src/: custom_button.cpp  custom_button.hpp  main.cpp
